--- a/fb-clone.html
+++ b/fb-clone.html
@@ -20,6 +20,7 @@
          .main{
             display: block;
             text-align: center;
+            align-items: center;
         }
         .login{
             background-color: #1877f2;
@@ -72,9 +73,15 @@
         }
         
         .forgot{
-            color: #1877f2;
+          text-align: center;
+          align-items: center; 
+            /* color: #1877f2; */
             margin-top: 17px;
             cursor: pointer;
+            background: red;
+            color:#fff;
+            border-radius: 4px;
+            padding: 4px;
         }
         .forgot:hover{
             text-decoration: underline;
