--- a/fb-clone.html
+++ b/fb-clone.html
@@ -180,6 +180,17 @@
                 margin-top: 15px;
             }
             
+            footer {
+                margin-top: 40px;
+                position: relative;
+                padding: 12px;
+            }
+            .footer_container {
+                color: #737373;
+                margin: 0 auto;
+                width: 100%;
+            }
+            
         }
         @media(max-width:450px){
             .right,input,.login{
